# langmap

./: .gitignore  .instructions.md  LICENSE  README.CLOUDFLARE.md  README.md  REFACTOR_PLAN.md  build-ios.sh  build.sh  cleanup_fts.sql  code-principle.md  package-lock.json  pyproject.toml  wrangler.toml
backend/: .gitignore  Dockerfile  README.DOCKER.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  test_api_fix.py  test_db_connection.py  test_languages_api.py  test_meaning_based_translations.py  test_meaning_tags_translations.py  tsconfig.json  vite.config.ts  worker.py  wrangler.jsonc  wrangler.toml
backend/app/: crud.py  main.py  schemas.py
backend/app/db/: base.py  database.py  models.py  session.py
backend/migrations/: 001_add_region_fields.py
backend/public/: index.html  manifest.json
backend/public/assets/: CollectionDetail-09N3WM7H.js  CollectionDetail-12uVmRjb.js  CollectionDetail-1l0ady7x.js  CollectionDetail-2exHLzl-.js  CollectionDetail-3Qc7CwHp.js  CollectionDetail-5Uy-T06c.js  CollectionDetail-6N3KAR4d.js  CollectionDetail-79jRjsio.js  (+2856 more)
backend/scripts/: 001_create_db.sh  003_create_languages_table.py  004_populate_languages.py  006_add_tags_to_meanings.py  007_add_region_fields.py  008_add_ui_translations.py  009_add_capital_fields_to_languages.py  010_d1_schema.sql  011_d1_populate_languages.sql  add_tags_column.py  create_db.sh  create_languages_table.py  migrate_region_data.py  populate_languages.py  seed_hello.py
backend/src/: config.ts  index.tsx
backend/tests/: test_basic.py  test_i18n.py
web/: README.md  (+7 more)
(+374 files in other folders)
