[project]
name = "langmap"
version = "0.1.0"
description = "Language mapping application deployed on Cloudflare Workers"
authors = [
    { name = "Lim", email = "lshare@outlook.com" }
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.22.0",
    "SQLAlchemy>=1.4",
    "pydantic>=1.10",
]

[tool.uv]
dev-dependencies = [
    "workers-py>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"